ingress/fixtures/output_convertFile/ingress_extensions.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`,`/foo`)
    middlewares: []
    priority: 10
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
