ingress/fixtures/output_convertFile/ingress_redirect_approot.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/`)
    middlewares:
    - name: redirect-17591616686595916377
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: redirect-17591616686595916377
  namespace: testing
spec:
  redirectRegex:
    regex: traefik.tchouk/$
    replacement: traefik.tchouk/index.html
