ingress/fixtures/output_convertFile/ingress_rewrite_target.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`rewrite`) && PathPrefix(`/api`)
    middlewares:
    - name: replace-path-rewrite/api
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: replace-path-rewrite/api
  namespace: testing
spec:
  replacePathRegex:
    regex: ^/api(.*)
    replacement: $1
