ingress/fixtures/output_convertFile/ingress_with_headers_annotations.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`custom-headers`) && PathPrefix(`/customheaders`)
    middlewares:
    - name: headers-11269227965516138364
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: headers-11269227965516138364
  namespace: testing
spec:
  headers:
    allowedHosts:
    - foo
    - fii
    - fuu
    browserXssFilter: true
    contentSecurityPolicy: foo
    contentTypeNosniff: true
    customBrowserXSSValue: foo
    customFrameOptionsValue: foo
    customRequestHeaders:
      Access-Control-Allow-Methods: POST,GET,OPTIONS
      Content-Type: application/json; charset=utf-8
    customResponseHeaders:
      Access-Control-Allow-Methods: POST,GET,OPTIONS
      Content-Type: application/json; charset=utf-8
    forceSTSHeader: true
    frameDeny: true
    hostsProxyHeaders:
    - foo
    - fii
    - fuu
    isDevelopment: true
    publicKey: foo
    referrerPolicy: foo
    sslForceHost: true
    sslHost: foo
    sslProxyHeaders:
      Access-Control-Allow-Methods: POST,GET,OPTIONS
      Content-Type: application/json; charset=utf-8
    sslRedirect: true
    sslTemporaryRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 666
