ingress/fixtures/output_convertFile/ingress_with_matcher.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && Path(`/bar`)
    middlewares: []
    priority: 0
    services:
    - name: service1
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && Path(`/foo`)
    middlewares: []
    priority: 0
    services:
    - name: service1
      port: 80
