ingress/fixtures/output_convertFile/ingress_with_matcher_modifier.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    middlewares:
    - name: traefik.tchouk-bar
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/foo`)
    middlewares:
    - name: traefik.tchouk-foo
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: traefik.tchouk-bar
  namespace: testing
spec:
  stripPrefix:
    prefixes:
    - /bar
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: traefik.tchouk-foo
  namespace: testing
spec:
  stripPrefix:
    prefixes:
    - /foo
