ingress/fixtures/output_convertFile/ingress_with_passtlscert.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`other`) && PathPrefix(`/sslstuff`)
    middlewares:
    - name: passtlscert-8071666217603188993
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: passtlscert-8071666217603188993
  namespace: testing
spec:
  passTLSClientCert:
    info:
      issuer:
        commonName: true
        country: true
        domainComponent: true
        locality: true
        organization: true
        province: true
        serialNumber: true
      notAfter: true
      notBefore: true
      sans: true
      subject:
        commonName: true
        country: true
        domainComponent: true
        locality: true
        organization: true
        province: true
        serialNumber: true
    pem: true
