ingress/fixtures/output_convertFile/ingress_with_request_modifier.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`,`/foo`)
    middlewares:
    - name: requestmodifier-963234829265067723
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: requestmodifier-963234829265067723
  namespace: testing
spec:
  addPrefix:
    prefix: toto
