ingress/fixtures/output_convertFile/ingress_with_whitelist.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`test`) && PathPrefix(`/whitelist-source-range`)
    middlewares:
    - name: whitelist-14559858879334308437
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: whitelist-14559858879334308437
  namespace: testing
spec:
  ipWhiteList:
    sourceRange:
    - 1.1.1.1/24
    - 1234:abcd::42/32
