ingress/fixtures/output_convertFile/ingress_with_errorpage.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`error-pages`) && PathPrefix(`/errorpages`)
    middlewares:
    - name: errorpage-bar-6906619524742457949
      namespace: testing
    - name: errorpage-foo-10449038770411266824
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: errorpage-bar-6906619524742457949
  namespace: testing
spec:
  errors:
    query: /foo
    status:
    - "404"
    - "501"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: errorpage-foo-10449038770411266824
  namespace: testing
spec:
  errors:
    query: /bar
    status:
    - "123"
    - "456"
